# nexus

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README_for_Editors.md  conf.py  launch-nexus-H2O.py  launch-nexus-aSi.py  launch-nexus-quick-test.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
benchmarks/: README.md  benchmark.py  benchmarkAB.py  generate.py
benchmarks/outputs/: avg_frame_time  avg_number_nodes  benchmark.agr  benchmark.eps  plot_benchmark.ipynb
benchmarks/performance/: README.md  benchmarks.py  performance-121.agr  performance-121.eps  performance-122.agr  performance-122.eps  performance.agr  performance.eps  plot_performance.py
benchmarks/validation/: nexus_inputs_all  nexus_inputs_critical_point  (+8 more)
docs/: api_reference.md  api_reference.rst  conf.py  contributing.md  contributing.rst  extensions.md  features.md  getting_started.md  getting_started.rst  index.md  index.rst  installation.md  introduction.md  introduction.rst  license.md  license.rst  requirements.txt  tutorial.ipynb  usage_examples.md  usage_examples.rst
examples/: amorphous_silicon.py  launch-nexus.py  silica-parallel_processing.py  silica-sequential_processing.py  water_ice.py
nexus/: __init__.py  main.py
scripts/: launch-nexus-aSi.py  launch-nexus-multiple-files.py  launch-nexus-parallel-multiple-files.py  launch-nexus-quick-test.py
tests/: conftest.py
tutorial/: tutorial-1.ipynb  tutorial.ipynb
(+1157 files in other folders)
