[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "nexus-cat"
version = "0.1.1"
description = "Nexus is a Cluster Analysis Toolkit package."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "jperradin", email = "jperradin@pm.me" },
]
dependencies = [
    "numpy>=1.20.0",
    "tqdm>=4.50.0",
    "colorama>=0.4.4",
    "numba>=0.53.0",
    "psutil>=5.8.0",
    "scipy>=1.12.0"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jperradin/nexus"
